# polyploid-potato-assembly

./: LICENSE  README.md  filter_and_replace.py  merge_countfiles_allnodes.py  sum_node_cov_5kb.py~
clustering-phasing/: Snakefile  add_unphased_nodes_tofile.py  cluster_allnodes.py  cluster_phasing.py  compute_graphstats.py  config.yaml  split_files.py  write_haplo_colors.py  write_nodes_to_haplotypes.py  write_paths.py  write_threaded_paths.py
coverage-analysis/: Snakefile  smk_coverage_altus.py  sum_node_cov_5kb.py  write_dosages.py
kmer-counting/: CMakeLists.txt  CMakeLists.txt~  Snakefile  Snakefile~  argumentparser.cpp~  config.yaml  config_offspring.json  environment.yml  evaluate_kmers.py  filter_and_replace.py  jellyfishkmercounter.hpp  merge_countfiles_allnodes.py  polyassembly_countkmers.cpp  polyassembly_findkmers.cpp  polyassembly_findkmers.cpp~
kmer-counting/src/: CMakeLists.txt  CMakeLists.txt~  argumentparser.cpp  argumentparser.hpp  jellyfishkmercounter.cpp  jellyfishkmercounter.hpp  polyassembly_countkmers.cpp  polyassembly_countkmers.cpp~  polyassembly_findkmers.cpp  polyassembly_findkmers.cpp~  uniquekmers.cpp  uniquekmers.hpp
kmer-counting/test-data/: testkmerfile.fa  testread.fa  testshortreadfile.fa
